# franzxaver

./: .env  .gitattributes  .gitignore  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.yml  prod.env
.devcontainer/: devcontainer.json  init.sh
.github/workflow/: build_and_publish.yml
.github/workflows/: push_images.yml
backend/: backend.dockerfile  celeryworker.dockerfile  start-reload.sh  start.sh
backend/app/: prestart.sh  pyproject.toml  worker-start.sh
backend/app/app/: worker.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: utils.py  video.py
backend/app/app/core/: celery_app.py  config.py
backend/app/app/schemas/: __init__.py  video.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/api_v1/: test_celery.py  test_users.py  test_video.py
backend/app/app/tests/unit/: conftest.py  test_alignment.py  test_slides.py  test_video.py
backend/app/app/transcriber/: __init__.py  alignment.py  formatted.md  slides.py  transcript.json  transcript_1.json  video.py  vmarkdown.py
frontend/: .env  package-lock.json
notebooks/: 1_result.md  1_transcript.txt  2_result.md  input.txt  levenstain.ipynb  result.md  slides.ipynb  transcribe.ipynb
test_data/: long_paragraph_result.md
test_data/long_text/: 0_0_834_prompt.json  0_0_834_result.md  1347_1519_2194_prompt.json  1347_1519_2194_result.md  1949_2194_2765_prompt.json  1949_2194_2765_result.md  2765_2765_3726_prompt.json  2765_2765_3726_result.md  703_834_1519_prompt.json  703_834_1519_result.md  (+1 more)
(+16 files in other folders)
