[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
python-multipart = "^0.0.5"
email-validator = "^1.2.1"
requests = "^2.28.1"
celery = "^5.2.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.10.2"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.1"
sqlalchemy = "^1.4.40"
pytest = "^7.1.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sse-starlette = "^1.3.3"
python-dotenv = "^1.0.0"
redis = "^4.5.4"
importlib-metadata = "^6.1.0"
kombu = "^5.2.4"
yt-dlp = "^2023.3.4"
openai = "^0.27.4"
levenshtein = "^0.20.9"
opencv-python = "^4.7.0.72"
scenedetect = "^0.6.1"
boto3 = "^1.26.131"
ffmpeg-python = "^0.2.0"
indexedproperty = "^0.1.4"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
mypy = "^0.971"
black = "^22.8.0"
isort = "^5.10.1"
autoflake = "^1.5.3"
flake8 = "^5.0.4"
pytest = "^7.1.3"
sqlalchemy2-stubs = "^0.0.2a27"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.21.0"
ipykernel = "^6.23.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
